Fixed overflow properties of modal window

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: center;
   padding: 5rem 0;
+  overflow-y: auto;
 }
 
 .modal-body {
@@ -17,6 +18,7 @@
   border-radius: 5px;
   background-color: #fff;
   text-align: center;
+  margin-bottom: 5rem;
 }
 
 .modal__close-btn {
